"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-04-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-17:
	  ipple: added emit-dot command, prints out a dot graph, 
		recommend running through graphviz's fdp, which
		honors manual fixed placement directives.
		Test dirs: enable generation of .ipl-dot and .ipl-pdf
		by default.


2011-04-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-16:
	  ipple/placement_engine: added support for gravity 
		constant force term, to more strongly encourage 
		snapping to well.  Potential energy calculation
		integral updated accordingly.
	  Bug fix: attraction/repulsion potential energy fixed
		sign (always positive) and direction of
		additive constant force term.
	  Added/updated test cases.


2011-04-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-15:
	  ipple, placement_engine: added option for repulsion constant
		so that any stretch below threshold can have a constant
		repulsive force, whereas previous linear-only model
		was too soft on collisions, this allows 'hardness'.
		Corresponding potential energy (integral) also updated.
		TODO: same with gravity, allow constant force term.
	  ipple: implemented 'snap-gravity-wells' to force objects to
		nearest gravity wells.  Does not, however, guarantee
		conflict free placement!
	  Added new test cases, old ones updated.


2011-04-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-14:
	  ipple: implemented gravity wells using spring model
		can add single wells, strided wells, and vary 
		gravity-well spring strength, in x,y,z-hyperplanes.
	  Test cases added.


2011-04-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-13: