@@ -1,7 +1,7 @@
 /**
 	\file "PR/placement_engine.h"
 	Physics simulator.
-	$Id: placement_engine.h,v 1.1.2.17 2011/04/28 21:44:21 fang Exp $
+	$Id: placement_engine.h,v 1.1.2.18 2011/04/28 22:40:53 fang Exp $
  */
 
 #ifndef	__HAC_PR_PLACEMENT_ENGINE_H__
@@ -182,6 +182,9 @@ public:
 // simulation
 	void
 	kill_momentum(void);
+
+	void
+	shake(const real_type&);
 
 	template <real_type (this_type::*MF)(void)>
 	void
