@@ -36,100 +36,100 @@ T=0, V=0, E=0, L=0
 
 @time=0.006
 object-positions:
-  [0]: @=<1.228e-14,7.601e-17,0.1> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<5.111e-16,3.165e-18,0.004163> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.007
 object-positions:
-  [0]: @=<0.0058,0.01168,0.1991> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<-0.003173,0.003618,0.01193> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.008
 object-positions:
-  [0]: @=<0.0823,0.06113,0.2404> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<-0.01501,0.004826,0.0624> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.009
 object-positions:
-  [0]: @=<0.0538,0.06342,0.3362> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.00868,0.08665,0.07426> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.01
 object-positions:
-  [0]: @=<-0.04179,0.09156,0.3278> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<-0.00209,0.08174,0.01993> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.011
 object-positions:
-  [0]: @=<0.03269,0.03322,0.4022> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<3.216e-05,0.08144,0.02179> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.012
 object-positions:
-  [0]: @=<0.01333,0.0244,0.3045> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<-0.01858,0.141,0.08327> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.013
 object-positions:
-  [0]: @=<0.1068,0.05531,0.2869> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.04499,0.1164,0.07817> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.014
 object-positions:
-  [0]: @=<0.1732,0.06323,0.2126> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.06375,0.1624,0.004799> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.015
 object-positions:
-  [0]: @=<0.1519,0.1312,0.2827> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1342,0.1993,-0.01314> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.016
 object-positions:
-  [0]: @=<0.1147,0.1237,0.1902> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1373,0.2022,-0.1024> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.017
 object-positions:
-  [0]: @=<0.08999,0.1213,0.09335> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1501,0.2116,-0.1222> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.018
 object-positions:
-  [0]: @=<0.1112,0.1733,0.01057> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1471,0.2145,-0.05442> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.019
 object-positions:
-  [0]: @=<0.07959,0.1583,-0.08312> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1471,0.214,-0.05475> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.02
 object-positions:
-  [0]: @=<0.08911,0.1364,0.01399> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1871,0.2547,-0.07828> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.021
 object-positions:
-  [0]: @=<0.0926,0.1396,-0.0859> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1998,0.2849,-0.1156> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.022
 object-positions:
-  [0]: @=<0.09964,0.1076,-0.1804> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1715,0.3491,-0.1177> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.023
 object-positions:
-  [0]: @=<0.09899,0.1388,-0.08538> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1957,0.3253,-0.1027> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.024
 object-positions:
-  [0]: @=<0.09449,0.1431,0.01442> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1471,0.349,-0.107> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
 
 @time=0.025
 object-positions:
-  [0]: @=<0.0589,0.06634,-0.03886> @'=<0,0,0> @"=<0,0,0>
+  [0]: @=<0.1812,0.4122,-0.1488> @'=<0,0,0> @"=<0,0,0>
 T=0, V=0, E=0, L=0
