@@ -1,0 +1,140 @@
+object-positions:
+  [0]: @=<10,10,0.04163> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<19.97,10.04,0.07762> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<29.85,10.01,0.5048> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.09,30.82,0.1186> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.89,29.95,-0.5434> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<30,30,0.01867> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<9.814,10.6,0.6564> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.42,9.79,0.02661> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<30.04,10.47,-0.229> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.79,31.19,-0.06079> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.92,29.98,-1.436> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<30.13,30.09,-0.1788> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<9.783,10.62,1.334> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.42,9.785,0.02326> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<30.44,10.88,-0.4642> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.92,31.49,-0.4343> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.64,30.62,-1.457> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<30.37,29.85,-0.02848> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<9.297,10.86,1.291> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.76,10.42,-0.3951> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<30.44,10.86,-0.5119> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.91,31.5,-0.516> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20.09,30.85,-1.01> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<30.06,29.92,-0.4994> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.665,10.48,1.263> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.43,10.24,-1.282> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<30.32,10.95,-0.4236> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<11.08,31.27,0.2456> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20.11,30.84,-1.148> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<30.06,29.93,-0.5017> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.666,10.48,1.849> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.85,10.31,-1.105> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<30.15,11.02,-0.6484> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.76,31.22,-0.4069> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20.18,30.5,-0.8345> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.66,30.06,0.09167> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.668,10.43,1.386> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<21.07,10.56,-1.88> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<30.19,11,0.02055> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.99,31.5,-0.9007> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20.2,30.4,-1.185> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.72,30.01,-0.3467> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.458,10.54,1.804> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<21.01,10.51,-1.091> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<29.71,10.93,0.7756> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<11.29,31.39,-0.6814> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20.26,30.36,-1.515> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.43,29.09,-0.4466> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.459,10.48,1.737> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<21.02,10.52,-1.109> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<29.6,11.28,0.8708> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<11.52,31.67,-0.5852> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20.45,30.38,-1.375> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.44,29.15,0.07525> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<9.031,9.957,1.75> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<21.09,10.59,-0.5708> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<29.1,11.42,1.151> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<12.24,32.01,-0.8017> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20.3,30.29,-1.317> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.47,29.21,-0.1207> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<9.223,10.25,2.678> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<21.3,10.09,-0.9176> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<29.05,10.71,1.572> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<12.09,31.78,-1.031> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.64,30.68,-1.594> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.47,29.24,-0.1546> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.626,10.2,2.481> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<21.25,10.33,-0.5362> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<29.03,10.34,1.392> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<11.5,31.24,-1.341> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.63,30.69,-1.575> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.5,29.23,0.8357> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.18,9.859,3.229> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.84,10.2,-0.6179> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<28.96,10.52,1.424> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<11.63,31.28,-1.178> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.98,30.49,-1.671> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.18,29.64,0.5626> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.444,9.916,3.324> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.59,10.29,0.27> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<28.8,10.39,0.5886> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<11.61,31.24,-0.3342> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.98,30.49,-1.659> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<29.19,29.63,0.5676> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.562,9.814,2.681> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.67,10.33,0.2265> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<28.79,10.39,1.378> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.93,31.04,-0.7056> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.98,30.68,-1.826> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<28.99,29.65,0.9917> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<8.294,9.807,3.496> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.68,10.31,1.19> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<28.79,10.39,1.441> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.95,31.07,-0.4309> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.89,30.56,-1.801> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<28.68,29.22,1.013> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<7.783,10.21,3.81> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.65,10.38,1.121> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<28.79,10.32,1.212> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.93,31.09,-0.4429> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.92,30.57,-1.851> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<28.19,29.28,1.129> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<7.739,10.17,2.899> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.5,9.713,0.4336> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<28.79,10.33,1.23> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.95,31.11,-0.3322> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<20,30.53,-1.944> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<28.6,29.68,0.9569> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<7.736,10.26,3.303> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.5,9.715,0.4168> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<28.79,10.25,0.3708> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.97,31.09,-0.3214> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.47,30.81,-1.163> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<28.2,29.47,0.8629> @'=<0,0,0> @"=<0,0,0>
+object-positions:
+  [0]: @=<7.757,9.959,3.337> @'=<0,0,0> @"=<0,0,0>
+  [1]: @=<20.6,9.792,0.452> @'=<0,0,0> @"=<0,0,0>
+  [2]: @=<29.1,10.91,-0.1499> @'=<0,0,0> @"=<0,0,0>
+  [3]: @=<10.94,31.19,-0.4151> @'=<0,0,0> @"=<0,0,0>
+  [4]: @=<19.18,30.92,-1.665> @'=<0,0,0> @"=<0,0,0>
+  [5]: @=<28.13,29.47,-0.03252> @'=<0,0,0> @"=<0,0,0>
